--- a/scss/custom-bootstrap.scss
+++ b/scss/custom-bootstrap.scss
@@ -2,3 +2,16 @@
 /* refer to bootstrap-4.0.0-alpha/scss/variables to see what you can override */
 
 @import '../bootstrap-4.0.0-alpha/scss/bootstrap';
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+.navbar{
+  background-color: purple;
+}
+
+.btn-primary{
+  background-color: #ff69b4;
+}
+
+.html{
+  font-family: 'Roboto', sans-serif;
+}
